# SAP

./: README.md  main.py  pyproject.toml  requirements.txt
sapt/: __init__.py  cli.py  sapt.yaml
sapt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sapt/api/: __init__.py  graphql.py  oauth.py  rest.py  websocket.py
sapt/core/: __init__.py  config.py  exceptions.py  logger.py  orchestrator.py  state.py  timer.py
sapt/models/: __init__.py  models.py
sapt/modules/: __init__.py  js_analyzer.py  tech_detector.py  threat_model.py  waf_detector.py
sapt/modules/owasp/: __init__.py  a01_idor.py  a03_sqli.py  a05_misconfig.py  a07_auth.py  a10_ssrf.py
sapt/phases/: __init__.py  exploit.py  recon.py  report.py  scan.py
sapt/reporting/: __init__.py  notify.py
sapt/tools/: __init__.py  base.py  registry.py
sapt/tools/exploit/: __init__.py  sqlmap.py
sapt/tools/recon/: __init__.py  dnsx.py  httpx_tool.py  katana.py  subfinder.py
sapt/tools/scan/: __init__.py  arjun.py  ffuf.py  naabu.py  nuclei.py
sapt/utils/: __init__.py  cvss.py  evidence.py  http.py  payloads.py
